# tactile-il

./: README.md  license.txt
contact-il/: .gitignore  README.md  env_setup.bash  requirements.txt  setup.py
contact-panda-envs/: .gitignore  README.md  (+1 more)
contact-panda-envs/contact_panda_envs/: CMakeLists.txt  __init__.py  package.xml  setup.py.old
contact-panda-envs/contact_panda_envs/envs/: __init__.py  panda_generic.py  panda_generic.yaml  panda_generic_sim.yaml
contact-panda-envs/contact_panda_envs/envs/cabinet/: cabinet_contact.py
contact-panda-envs/contact_panda_envs/envs/cabinet/configs/: bottom-glass-orb-close.yaml  bottom-glass-orb.yaml  bottom-silver-cylinder-close.yaml  bottom-silver-cylinder.yaml  bottom-silver-handle.yaml  real-env-tests.yaml  top-ct-black-knob.yaml  top-door-wipe.yaml  top-flat-black-handle-close.yaml  top-flat-black-handle-new-pos-close.yaml  top-flat-black-handle-new-pos.yaml  top-flat-black-handle.yaml  top-glass-orb-close.yaml  top-glass-orb-new-pos-close.yaml  top-glass-orb-new-pos.yaml  top-glass-orb.yaml  top-shelf-wipe.yaml
contact-panda-envs/contact_panda_envs/envs/cabinet/configs/reset_trajs/PandaBottomSilverHandle/: 04-11-23-14_26_59.pkl
contact-panda-envs/contact_panda_envs/envs/cabinet/configs/reset_trajs/PandaCabinetOneFinger6DOF/: 02-24-23-16_34_36.pkl
contact-panda-envs/contact_panda_envs/envs/cabinet/configs/reset_trajs/PandaTopGlassOrb/: 04-08-23-14_16_33.pkl  04-08-23-14_48_41.pkl
contact-panda-envs/contact_panda_envs/rviz/: generic.rviz
contact-panda-envs/contact_panda_envs/utils/: get_env_params.py
(+267 files in other folders)
