<?xml version="1.0"?>
<package>
  <name>contact_panda_envs</name>
  <version>0.0.0</version>
  <description>The contact_imitation package</description>
  <maintainer email="t.ablett@partner.samsung.com">trevor</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>